# graph-fraud-command-center

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  metrics.py  schemas.py  settings.py
app/services/: __init__.py  explain.py  feature_engineering.py  graph_store.py  scoring.py  simulator.py
benchmarks/: benchmark_2026-02-28.json
docker/: Dockerfile.api
infra/: nginx.aegis-graph-fraud-gnn.conf
ml/: __init__.py  gnn.py  self_supervised.py
monitoring/grafana/dashboards/: aegis-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: benchmark.py  evaluate_quality.py  healthtest.sh  smoke.sh  train_synthetic.py
tests/: test_health.py  test_score.py  test_scoring_quality.py
