[project]
name = "aegis-graph-fraud-gnn"
version = "0.1.0"
description = "Real-time graph fraud ring detection with DL scoring"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
